chore: updated sta realtime endpoints chore: removed realtime/dataset endpoint
